--- a/Eagle/imgui.ini
+++ b/Eagle/imgui.ini
@@ -9,41 +9,106 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer Stats]
-Pos=0,0
-Size=300,445
+Size=301,421
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Scene]
-Pos=302,0
-Size=1098,800
+Pos=398,0
+Size=1002,800
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=0,447
-Size=300,294
+Pos=0,108
+Size=396,630
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=300,445
+Size=396,106
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Restart Scene]
-Pos=0,743
-Size=300,57
+Pos=0,740
+Size=396,60
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Game Stats]
+Pos=0,0
+Size=396,106
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Dear ImGui Demo]
+ViewportPos=1330,601
+ViewportId=0xE927CF2F
+Size=648,680
+Collapsed=0
+
+[Table][0xBF3CBA1D,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xD3F25573,3]
+RefScale=17
+Column 0  Width=57
+Column 1  Width=57
+Column 2  Width=57
+
+[Table][0x343BEAD0,3]
+RefScale=17
+Column 0  Width=58
+Column 1  Width=58
+Column 2  Weight=1.0000
+
+[Table][0xAD32BB6A,6]
+RefScale=17
+Column 0  Width=58
+Column 1  Width=58
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+
+[Table][0xD4E274A8,3]
+RefScale=17
+Column 0  Width=58
+Column 1  Width=58
+Column 2  Width=58
+
+[Table][0x8675D9AC,3]
+RefScale=17
+Column 0  Width=71
+Column 1  Width=71
+Column 2  Width=71
+
+[Table][0x703DD030,7]
+RefScale=17
+Column 0  Width=47
+Column 1  Width=104
+Column 2  Width=104
+Column 3  Width=104
+Column 4  Width=104
+Column 5  Width=104
+Column 6  Width=104
+
+[Table][0x22B77DC7,3]
+RefScale=17
+Column 0  Width=126 Sort=0v
+Column 1  Width=65
+Column 2  Width=-1
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=493,268 Size=1400,800 Split=X Selected=0x18B8C0DE
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=300,787 Split=Y Selected=0x788BAA0D
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=138,445 Selected=0x788BAA0D
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=138,353 Split=Y Selected=0xC89E3217
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=138,294 Selected=0xC89E3217
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=138,57 Selected=0x2A4D0B77
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1098,787 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=1400,800 Split=X Selected=0x18B8C0DE
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=396,787 Split=Y Selected=0x788BAA0D
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=138,106 Selected=0x788BAA0D
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=138,692 Split=Y Selected=0xC89E3217
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=138,630 Selected=0xC89E3217
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=138,60 Selected=0x2A4D0B77
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1002,787 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
 
