Update readme & make the starting scene more pleasant

--- a/Eagle/imgui.ini
+++ b/Eagle/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 [Window][Renderer Stats]
 Size=301,421
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000001,1
 
 [Window][Scene]
 Pos=302,0
@@ -20,28 +20,28 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=0,143
-Size=300,584
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Hierarchy]
-Pos=0,0
-Size=300,141
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Restart Scene]
-Pos=0,729
-Size=300,71
+Pos=0,186
+Size=300,549
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Hierarchy]
+Pos=0,0
+Size=300,184
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Restart Scene]
+Pos=0,737
+Size=300,63
+Collapsed=0
+DockId=0x00000004,0
+
 [Window][Game Stats]
 Pos=0,0
-Size=300,141
+Size=300,184
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000005,1
 
 [Window][Dear ImGui Demo]
 ViewportPos=1330,601
@@ -104,11 +104,11 @@ Column 1  Width=65
 Column 2  Width=-1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=34,57 Size=1400,800 Split=X Selected=0x18B8C0DE
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,135 Size=1400,800 Split=X Selected=0x18B8C0DE
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=300,787 Split=Y Selected=0x788BAA0D
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=138,141 Selected=0x788BAA0D
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=138,657 Split=Y Selected=0xC89E3217
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=138,584 Selected=0xC89E3217
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=138,71 Selected=0x2A4D0B77
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=300,735 Split=Y Selected=0x788BAA0D
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=300,184 Selected=0x788BAA0D
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=300,549 Selected=0xC89E3217
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=300,63 Selected=0x2A4D0B77
   DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1098,787 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
 
