--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -91,6 +91,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
@@ -117,6 +118,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
@@ -144,13 +146,13 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h" />
     <ClInclude Include="src\Dependencies\Entt.h" />
     <ClInclude Include="src\Dependencies\ImGui.h" />
     <ClInclude Include="src\Dependencies\ImGuiInternal.h" />
@@ -174,6 +176,7 @@
     <ClInclude Include="src\Eagle\Core\Keycodes.h" />
     <ClInclude Include="src\Eagle\Core\Log.h" />
     <ClInclude Include="src\Eagle\Core\Random.h" />
+    <ClInclude Include="src\Eagle\Core\Serialize.h" />
     <ClInclude Include="src\Eagle\Core\Time.h" />
     <ClInclude Include="src\Eagle\Core\UniqueID.h" />
     <ClInclude Include="src\Eagle\Core\Window.h" />
@@ -680,12 +683,6 @@
     <ProjectReference Include="..\Application\Application.vcxproj">
       <Project>{D9DE78AF-4594-F1A4-CE88-EB7B3A3DE8A8}</Project>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Engine.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="..\Build\Assets\Icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
