--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -91,7 +91,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/ignore:4099 /ignore:4098 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
@@ -118,7 +118,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/ignore:4099 /ignore:4098 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
@@ -146,7 +146,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freetype.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/ignore:4099 /ignore:4098 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-x86_64\$(ProjectName)\$(ProjectName).exe ..\Build &gt; nul)</Command>
@@ -176,7 +176,7 @@
     <ClInclude Include="src\Eagle\Core\Keycodes.h" />
     <ClInclude Include="src\Eagle\Core\Log.h" />
     <ClInclude Include="src\Eagle\Core\Random.h" />
-    <ClInclude Include="src\Eagle\Core\Serialize.h" />
+    <ClInclude Include="src\Eagle\Core\AppData.h" />
     <ClInclude Include="src\Eagle\Core\Time.h" />
     <ClInclude Include="src\Eagle\Core\UniqueID.h" />
     <ClInclude Include="src\Eagle\Core\Window.h" />
@@ -633,6 +633,7 @@
     <ClCompile Include="src\Eagle\Components\ParticleComponents\ParticleSystem.cpp" />
     <ClCompile Include="src\Eagle\Components\ParticleComponents\ParticleUpdater.cpp" />
     <ClCompile Include="src\Eagle\Components\SceneCamera.cpp" />
+    <ClCompile Include="src\Eagle\Core\AppData.cpp" />
     <ClCompile Include="src\Eagle\Core\Application.cpp" />
     <ClCompile Include="src\Eagle\Core\EntryPoint.cpp" />
     <ClCompile Include="src\Eagle\Core\GameLayer.cpp" />
