--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClInclude Include="src\Eagle\Core\Random.h">
       <Filter>src\Eagle\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Eagle\Core\Serialize.h">
-      <Filter>src\Eagle\Core</Filter>
-    </ClInclude>
     <ClInclude Include="src\Eagle\Core\Time.h">
       <Filter>src\Eagle\Core</Filter>
     </ClInclude>
@@ -1494,6 +1491,9 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Core\AppData.h">
+      <Filter>src\Eagle\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Components\ParticleComponents\ParticleData.cpp">
@@ -1613,5 +1613,6 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\Eagle\Core\AppData.cpp" />
   </ItemGroup>
 </Project>
