--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -105,9 +105,6 @@
     <ClInclude Include="src\Eagle\Components\SceneCamera.h">
       <Filter>src\Eagle\Components</Filter>
     </ClInclude>
-    <ClInclude Include="src\Eagle\Core\AppData.h">
-      <Filter>src\Eagle\Core</Filter>
-    </ClInclude>
     <ClInclude Include="src\Eagle\Core\Application.h">
       <Filter>src\Eagle\Core</Filter>
     </ClInclude>
@@ -1497,6 +1494,12 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Core\Serialization.h">
+      <Filter>src\Eagle\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Core\AssetManager.h">
+      <Filter>src\Eagle\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Components\ParticleComponents\ParticleData.cpp">
@@ -1513,9 +1516,6 @@
     </ClCompile>
     <ClCompile Include="src\Eagle\Components\SceneCamera.cpp">
       <Filter>src\Eagle\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Eagle\Core\AppData.cpp">
-      <Filter>src\Eagle\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Eagle\Core\Application.cpp">
       <Filter>src\Eagle\Core</Filter>
@@ -1619,5 +1619,9 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\Eagle\Core\Serialization.cpp">
+      <Filter>src\Eagle\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Core\AssetManager.cpp" />
   </ItemGroup>
 </Project>
