--- a/imgui.ini
+++ b/imgui.ini
@@ -10,40 +10,40 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=395,263
+Size=485,263
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Scene]
-Pos=397,0
-Size=883,625
+Pos=487,0
+Size=793,625
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
 Pos=0,265
-Size=395,455
+Size=485,455
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=397,627
-Size=883,93
+Pos=487,627
+Size=793,93
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=395,263
+Size=485,263
 Collapsed=0
 DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,135 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=395,720 Split=Y Selected=0x119C8DE5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,263 Selected=0x788BAA0D
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=774,533 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=485,720 Split=Y Selected=0x119C8DE5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,263 Selected=0x119C8DE5
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,455 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=883,720 Split=Y Selected=0x18B8C0DE
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=793,720 Split=Y Selected=0x18B8C0DE
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,625 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,93 Selected=0x2A4D0B77
 
