Asset panel sorting

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,44 +10,44 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=396,616
+Size=369,337
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Scene]
-Pos=398,0
-Size=882,625
+Pos=371,0
+Size=909,625
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=0,618
-Size=396,102
+Pos=0,339
+Size=369,381
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=398,627
-Size=882,93
+Pos=371,627
+Size=909,93
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=396,616
+Size=369,337
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=396,616
+Size=369,337
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Dear ImGui Demo]
-ViewportPos=1214,273
+ViewportPos=1791,372
 ViewportId=0xE927CF2F
-Size=517,680
+Size=516,680
 Collapsed=0
 
 [Table][0xBF3CBA1D,3]
@@ -55,12 +55,74 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
+[Table][0xD3F25573,3]
+RefScale=17
+Column 0  Width=57
+Column 1  Width=57
+Column 2  Width=57
+
+[Table][0x343BEAD0,3]
+RefScale=17
+Column 0  Width=90
+Column 1  Width=185
+Column 2  Weight=1.0000
+
+[Table][0xAD32BB6A,6]
+RefScale=17
+Column 0  Width=58
+Column 1  Width=4
+Column 2  Width=-1
+Column 3  Weight=0.4601
+Column 4  Weight=1.5399
+Column 5  Weight=1.0000
+
+[Table][0xD4E274A8,3]
+RefScale=17
+Column 0  Width=58
+Column 1  Width=58
+Column 2  Width=58
+
+[Table][0x4DEB2512,3]
+Column 0  Weight=0.9726
+Column 1  Weight=1.0274
+Column 2  Weight=1.0000
+
+[Table][0x703DD030,7]
+RefScale=17
+Column 0  Width=47
+Column 1  Width=104
+Column 2  Width=104
+Column 3  Width=104
+Column 4  Width=104
+Column 5  Width=104
+Column 6  Width=104
+
+[Table][0x22B77DC7,3]
+RefScale=17
+Column 0  Width=188 Visible=1 Sort=0v
+Column 1  Width=-1 Visible=0
+Column 2  Width=-1 Visible=0
+
+[Table][0x46991A63,4]
+RefScale=17
+Column 0  Width=50 Sort=1v
+Column 1  Width=68 Sort=2v
+Column 2  Width=42
+Column 3  Weight=1.0000 Sort=0v
+
+[Table][0x45DC17A8,4]
+RefScale=17
+Column 0  Width=164
+Column 1  Width=47
+Column 2  Width=106
+Column 3  Width=137 Sort=0^
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=346,369 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=396,720 Split=Y Selected=0x119C8DE5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,616 Selected=0x9E0696AE
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,102 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=882,720 Split=Y Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=190,213 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,720 Split=Y Selected=0x119C8DE5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,337 Selected=0x788BAA0D
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,381 Selected=0xC89E3217
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=909,720 Split=Y Selected=0x18B8C0DE
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,625 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,93 Selected=0x2A4D0B77
 
