--- a/imgui.ini
+++ b/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=369,337
+Size=462,681
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Scene]
-Pos=371,0
-Size=909,625
+Pos=464,0
+Size=816,625
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=0,339
-Size=369,381
+Pos=0,683
+Size=462,37
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=371,627
-Size=909,93
+Pos=464,627
+Size=816,93
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=369,337
+Size=462,681
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=369,337
+Size=462,681
 Collapsed=0
 DockId=0x00000003,2
 
@@ -113,16 +113,16 @@ Column 3  Weight=1.0000 Sort=0v
 [Table][0x45DC17A8,4]
 RefScale=17
 Column 0  Width=164
-Column 1  Width=47
+Column 1  Width=47 Sort=0v
 Column 2  Width=106
-Column 3  Width=137 Sort=0^
+Column 3  Width=137
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=190,213 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,720 Split=Y Selected=0x119C8DE5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,337 Selected=0x788BAA0D
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,381 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=909,720 Split=Y Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=418,246 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=462,720 Split=Y Selected=0x119C8DE5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,681 Selected=0x788BAA0D
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,37 Selected=0xC89E3217
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=816,720 Split=Y Selected=0x18B8C0DE
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,625 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,93 Selected=0x2A4D0B77
 
