Engine stability improvements

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=555,681
+Size=335,337
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Scene]
-Pos=557,0
-Size=723,625
+Pos=337,0
+Size=943,625
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=0,683
-Size=555,37
+Pos=0,339
+Size=335,381
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=557,627
-Size=723,93
+Pos=337,627
+Size=943,93
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=555,681
+Size=335,337
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=555,681
+Size=335,337
 Collapsed=0
 DockId=0x00000003,2
 
@@ -112,17 +112,17 @@ Column 3  Weight=1.0000 Sort=0v
 
 [Table][0x45DC17A8,4]
 RefScale=17
-Column 0  Width=164 Sort=0v
+Column 0  Width=164
 Column 1  Width=47
-Column 2  Width=106
+Column 2  Width=106 Sort=0^
 Column 3  Width=137
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=216,239 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=555,720 Split=Y Selected=0x119C8DE5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,681 Selected=0x9E0696AE
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,37 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=723,720 Split=Y Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=802,274 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=335,720 Split=Y Selected=0x119C8DE5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,337 Selected=0x788BAA0D
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,381 Selected=0xC89E3217
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=943,720 Split=Y Selected=0x18B8C0DE
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,625 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,93 Selected=0x2A4D0B77
 
