Engine stability improvements 2

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=1400,700
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,44 +10,49 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=335,337
+Size=524,700
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000001,1
 
 [Window][Scene]
-Pos=337,0
-Size=943,625
+Pos=526,0
+Size=556,622
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=0,339
-Size=335,381
+Pos=1084,0
+Size=316,700
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=337,627
-Size=943,93
+Pos=526,624
+Size=556,76
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=335,337
+Size=524,700
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=335,337
+Size=524,700
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x00000001,2
 
 [Window][Dear ImGui Demo]
 ViewportPos=1791,372
 ViewportId=0xE927CF2F
 Size=516,680
+Collapsed=0
+
+[Window][Custom window]
+Pos=478,206
+Size=264,218
 Collapsed=0
 
 [Table][0xBF3CBA1D,3]
@@ -118,11 +123,11 @@ Column 2  Width=106 Sort=0^
 Column 3  Width=137
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=802,274 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=335,720 Split=Y Selected=0x119C8DE5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=170,337 Selected=0x788BAA0D
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=170,381 Selected=0xC89E3217
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=943,720 Split=Y Selected=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,625 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
-    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,93 Selected=0x2A4D0B77
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=800,453 Size=1400,700 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1082,720 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=524,720 Selected=0x788BAA0D
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=556,720 Split=Y Selected=0x18B8C0DE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,622 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,76 Selected=0x2A4D0B77
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=316,720 Selected=0xC89E3217
 
