--- a/imgui.ini
+++ b/imgui.ini
@@ -10,49 +10,68 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=524,700
+Size=300,700
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Scene]
-Pos=526,0
-Size=556,622
+Pos=302,0
+Size=796,615
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1084,0
-Size=316,700
+Pos=1100,0
+Size=300,700
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=526,624
-Size=556,76
+Pos=302,617
+Size=796,83
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=524,700
+Size=300,700
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=524,700
+Size=300,700
 Collapsed=0
 DockId=0x00000001,2
 
 [Window][Dear ImGui Demo]
-ViewportPos=1791,372
-ViewportId=0xE927CF2F
-Size=516,680
+Pos=456,108
+Size=418,514
 Collapsed=0
 
 [Window][Custom window]
 Pos=478,206
 Size=264,218
+Collapsed=0
+
+[Window][##Temp Window]
+Pos=343,216
+Size=623,159
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=426,369
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=352,155
+Size=420,435
 Collapsed=0
 
 [Table][0xBF3CBA1D,3]
@@ -117,17 +136,21 @@ Column 3  Weight=1.0000 Sort=0v
 
 [Table][0x45DC17A8,4]
 RefScale=17
-Column 0  Width=164
+Column 0  Width=164 Sort=0v
 Column 1  Width=47
-Column 2  Width=106 Sort=0^
+Column 2  Width=106
 Column 3  Width=137
 
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=800,453 Size=1400,700 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1082,720 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=524,720 Selected=0x788BAA0D
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=556,720 Split=Y Selected=0x18B8C0DE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,622 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,76 Selected=0x2A4D0B77
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=316,720 Selected=0xC89E3217
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1400,700 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1098,720 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=300,720 Selected=0x788BAA0D
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=796,720 Split=Y Selected=0x18B8C0DE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,615 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,83 Selected=0x2A4D0B77
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,720 Selected=0xC89E3217
 
