Engine stability improvements 3

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,15 +10,15 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=300,700
+Size=312,700
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Scene]
-Pos=302,0
-Size=796,615
+Pos=314,0
+Size=784,584
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Properties]
 Pos=1100,0
@@ -27,20 +27,20 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Restart Scene]
-Pos=302,617
-Size=796,83
+Pos=314,617
+Size=784,83
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=300,700
+Size=312,700
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets viewer]
 Pos=0,0
-Size=300,700
+Size=312,700
 Collapsed=0
 DockId=0x00000001,2
 
@@ -73,6 +73,18 @@ Collapsed=0
 Pos=352,155
 Size=420,435
 Collapsed=0
+
+[Window][New window]
+ViewportPos=1243,480
+ViewportId=0x260362E5
+Size=208,134
+Collapsed=0
+
+[Window][Restart Application]
+Pos=314,586
+Size=784,114
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Weight=1.0000
@@ -146,11 +158,13 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1400,700 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1098,720 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=300,720 Selected=0x788BAA0D
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=796,720 Split=Y Selected=0x18B8C0DE
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=918,615 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=918,83 Selected=0x2A4D0B77
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,720 Selected=0xC89E3217
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,343 Size=1400,700 Split=X
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1098,720 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=312,720 Selected=0x788BAA0D
+    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=784,720 Split=Y Selected=0x18B8C0DE
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=918,615 Split=Y Selected=0x18B8C0DE
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=784,584 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=784,114 Selected=0x14461C91
+      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=918,83 Selected=0x2A4D0B77
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,720 Selected=0xC89E3217
 
