--- a/imgui.ini
+++ b/imgui.ini
@@ -12,11 +12,11 @@ Collapsed=0
 Pos=0,0
 Size=300,700
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000002,1
 
 [Window][Scene]
 Pos=302,0
-Size=796,532
+Size=796,479
 Collapsed=0
 DockId=0x00000007,0
 
@@ -36,13 +36,13 @@ DockId=0x00000006,0
 Pos=0,0
 Size=300,700
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Assets viewer]
-Pos=0,0
+Pos=1100,0
 Size=300,700
 Collapsed=0
-DockId=0x00000001,2
+DockId=0x00000004,1
 
 [Window][Dear ImGui Demo]
 Pos=456,108
@@ -81,10 +81,16 @@ Size=208,134
 Collapsed=0
 
 [Window][Restart Application]
-Pos=302,534
-Size=796,166
+Pos=302,481
+Size=796,219
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000B,0
+
+[Window][ExampleWindow]
+Pos=302,393
+Size=796,163
+Collapsed=0
+DockId=0x00000009,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Weight=1.0000
@@ -148,7 +154,7 @@ Column 3  Weight=1.0000 Sort=0v
 
 [Table][0x45DC17A8,4]
 RefScale=17
-Column 0  Width=164 Sort=0v
+Column 0  Width=164 Sort=0^
 Column 1  Width=47
 Column 2  Width=106
 Column 3  Width=137
@@ -158,13 +164,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=648,418 Size=1400,700 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1098,720 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=300,720 Selected=0x788BAA0D
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=796,720 Split=Y Selected=0x18B8C0DE
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=918,615 Split=Y Selected=0x18B8C0DE
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=784,532 CentralNode=1 HiddenTabBar=1 Selected=0x18B8C0DE
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=784,166 Selected=0x14461C91
-      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=918,83 Selected=0x2A4D0B77
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,720 Selected=0xC89E3217
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,343 Size=1400,700 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1098,700 Split=Y
+    DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=0,0 Split=X Selected=0x18B8C0DE
+      DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=300,532 Selected=0x788BAA0D
+      DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=796,532 Split=Y Selected=0x18B8C0DE
+        DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=797,479 CentralNode=1 Selected=0x18B8C0DE
+        DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=797,219 Split=Y Selected=0xAB301D23
+          DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=634,163 Selected=0xAB301D23
+          DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=634,142 Selected=0x14461C91
+    DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=918,83 Selected=0x2A4D0B77
+  DockNode          ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,700 Selected=0xC89E3217
 
