Small visual pass

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1400,700
+Size=1920,991
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Stats]
 Pos=0,0
-Size=300,700
+Size=364,991
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Scene]
-Pos=302,0
-Size=796,646
+Pos=366,0
+Size=1145,911
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=1100,0
-Size=300,700
+Pos=1513,0
+Size=407,991
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,13 +34,13 @@ DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=300,700
+Size=364,991
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Assets viewer]
-Pos=1100,0
-Size=300,700
+Pos=1513,0
+Size=407,991
 Collapsed=0
 DockId=0x00000004,1
 
@@ -81,8 +81,8 @@ Size=208,134
 Collapsed=0
 
 [Window][Restart Application]
-Pos=302,648
-Size=796,52
+Pos=366,913
+Size=1145,78
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -154,25 +154,25 @@ Column 3  Weight=1.0000 Sort=0v
 
 [Table][0x45DC17A8,4]
 RefScale=17
-Column 0  Width=164 Sort=0^
-Column 1  Width=47
-Column 2  Width=106
-Column 3  Width=137
+Column 0  Width=148 Sort=0^
+Column 1  Width=58
+Column 2  Width=120
+Column 3  Width=638
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=1400,700 Split=X
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1098,700 Split=Y
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1511,700 Split=Y
     DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=0,0 Split=X Selected=0x18B8C0DE
-      DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=300,532 Selected=0x788BAA0D
-      DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=796,532 Split=Y Selected=0x18B8C0DE
-        DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=797,646 CentralNode=1 Selected=0x18B8C0DE
-        DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=797,52 Split=Y Selected=0xAB301D23
+      DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=364,532 Selected=0x788BAA0D
+      DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=1145,532 Split=Y Selected=0x18B8C0DE
+        DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=797,620 CentralNode=1 Selected=0x18B8C0DE
+        DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=797,78 Split=Y Selected=0xAB301D23
           DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=634,163 Selected=0xAB301D23
           DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=634,142 Selected=0x14461C91
     DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=918,83 Selected=0x2A4D0B77
-  DockNode          ID=0x00000004 Parent=0x8B93E3BD SizeRef=300,700 Selected=0xC89E3217
+  DockNode          ID=0x00000004 Parent=0x8B93E3BD SizeRef=407,700 Selected=0x9E0696AE
 
